kustomize/base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: app
  template:
    metadata:
      labels:
        deployment: app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: deployment
                  operator: In
                  values:
                  - app
      volumes:
      - name: log-volume
        hostPath:
          path: /var/worker/log
          type: DirectoryOrCreate
      - name: configmap-volume
        configMap:
          name: configmap
      terminationGracePeriodSeconds: 40
      containers:
      - image: gashirar/k8s-debug-tools:v1
        imagePullPolicy: Always
        name: adapter
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8081
          name: adapter-port
        volumeMounts:
        - name: configmap-volume
          mountPath: /etc/config
        - name: log-volume
          mountPath: /log
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 10"]
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1 # libeness must be 1
          failureThreshold: 1
          httpGet:
            path: /liveness
            port: adapter-port
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            path: /readiness
            port: adapter-port
      - image: gashirar/k8s-debug-tools:v1
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8082
          name: api-port
        volumeMounts:
        - name: configmap-volume
          mountPath: /etc/config
        - name: log-volume
          mountPath: /log
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 30"]
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1 # libeness must be 1
          failureThreshold: 1
          httpGet:
            path: /liveness
            port: api-port
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            path: /readiness
            port: api-port
