kustomize/base/external-domain-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-domain-service
spec:
  type: ExternalName
  externalName: www.google.com
