kustomize/base/external-ip-endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: external-ip-service
subsets:
  - addresses:
      - ip: 216.58.197.3 # Google
    ports:
      - port: 80
