kustomize/base/external-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip-service
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
