kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    deployment: app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: adapter-port
    name: service-port
