kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - host: a991a0a71c4ac11e99b0f0607fa5f72b-864084602.ap-southeast-1.elb.amazonaws.com
    http:
      paths:
      - path: /sample
        backend:
          serviceName: sample-service
          servicePort: 8080
