kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 60s
  name: sample-route
spec:
  host: www.example.com
  port:
    targetPort: service-port
  to:
    kind: Service
    name: sample-service
    weight: 100
  wildcardPolicy: None
